[package]
name = "psswd"
version = "0.1.0"
authors = ["ludwig <gogopex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt="0.3.15"
dirs = "3.0"
rpassword = "4.0"
scrypt="0.3.1"
anyhow="1.0.32"
age = "0.4"
secrecy = "0.6"
# sha2="0.9.1"


# termion="1.5.5"
# clap="2.33.1"
# ansi_term = "0.12.1"
# confy="0.4.0"
# serde_derive="1.0.114"
# serde="1.0.114"
# serde_json="1.0.57"
