[package]
name = "psswd"
version = "0.1.3"
authors = ["ludwig <gogopex@gmail.com>"]
edition = "2018"
keywords = ["password", "password-manager", "encryption", "terminal", "shell", "utility"]
categories = ["command-line-utilities", "cryptography"]
readme = "README.md"
description="A small password manager made in Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt="0.3.15"
dirs = "3.0"
rpassword = "4.0"
anyhow="1.0.32"
age = "0.4"
secrecy = "0.6"
# confy="0.4.0"
# ansi_term = "0.12.1"
